Connecter/Team7/connect-four-stderr-2.txt
player = 2 width = 7 height = 6 {"grid": [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]}

{"move": 1}
{"grid": [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 2, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 1]]}

{"move": 6}
{"grid": [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 2, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 2, 1]]}

{"move": 5}
{"grid": [[0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 2, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 2], [0, 0, 0, 0, 2, 1]]}

{"move": 2}
{"grid": [[0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 2, 1], [0, 0, 0, 0, 0, 2], [0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 2], [0, 0, 0, 0, 2, 1]]}

{"move": 2}
{"grid": [[0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 2, 1], [0, 0, 0, 0, 2, 2], [0, 0, 0, 0, 1, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 2], [0, 0, 0, 0, 2, 1]]}

{"move": 1}
{"grid": [[0, 0, 0, 0, 0, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 0, 2, 2], [0, 0, 0, 0, 1, 1], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 4}
{"grid": [[0, 0, 0, 0, 0, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 0, 2, 2], [0, 0, 0, 0, 1, 1], [0, 0, 0, 0, 0, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 2}
{"grid": [[0, 0, 0, 0, 0, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 2, 2, 2], [0, 0, 0, 0, 1, 1], [0, 0, 0, 0, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 3}
{"grid": [[0, 0, 0, 0, 1, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 2, 2, 2], [0, 0, 0, 2, 1, 1], [0, 0, 0, 0, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 3}
{"grid": [[0, 0, 0, 0, 1, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 2, 2, 2], [0, 0, 2, 2, 1, 1], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 3}
{"grid": [[0, 0, 0, 0, 1, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 2, 2, 2], [1, 2, 2, 2, 1, 1], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 4}
{"grid": [[0, 0, 0, 1, 1, 1], [0, 0, 0, 2, 2, 1], [0, 0, 0, 2, 2, 2], [1, 2, 2, 2, 1, 1], [0, 0, 2, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 0}
{"grid": [[0, 0, 2, 1, 1, 1], [0, 0, 1, 2, 2, 1], [0, 0, 0, 2, 2, 2], [1, 2, 2, 2, 1, 1], [0, 0, 2, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 0, 1, 2, 1]]}

{"move": 6}
{"grid": [[0, 0, 2, 1, 1, 1], [0, 0, 1, 2, 2, 1], [0, 0, 1, 2, 2, 2], [1, 2, 2, 2, 1, 1], [0, 0, 2, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 2, 1, 2, 1]]}

{"move": 2}
{"grid": [[0, 1, 2, 1, 1, 1], [0, 0, 1, 2, 2, 1], [0, 2, 1, 2, 2, 2], [1, 2, 2, 2, 1, 1], [0, 0, 2, 1, 1, 2], [0, 0, 0, 1, 1, 2], [0, 0, 2, 1, 2, 1]]}

{"move": 4}

[4856] Failed to execute script main
Traceback (most recent call last):
  File "main.py", line 39, in <module>
  File "main.py", line 26, in main
  File "data_reader.py", line 19, in readGrid
  File "ast.py", line 46, in literal_eval
  File "ast.py", line 35, in parse
  File "<unknown>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
